# MultiAgent-Campaign-Concept-Generator

./: .gitignore  README.md
.github/workflows/: deploy-frontend.yml
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py
backend/app/graph/: builder.py
backend/app/graph/nodes/: creative_agent.py  quality_gate.py  strategy_agent.py  trend_agent.py
backend/app/models/: request.py  response.py  state.py
backend/app/routes/: campaigns.py
backend/app/seed/: seed_chroma.py
backend/app/services/: anthropic_client.py  chroma_service.py  progress_manager.py
backend/data/: campaign_examples.json
frontend/: vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: CampaignForm.tsx  ConceptCard.tsx  ConceptList.tsx  Layout.tsx  PipelineProgress.tsx  QualityBadge.tsx
frontend/src/hooks/: useCampaignGenerate.ts  useSSE.ts
frontend/src/lib/: api.ts
frontend/src/types/: campaign.ts
